<resources>

    <!-- General Strings -->
    <string name="app_name">Finanz App</string>
    <string name="general_textview_placeholder">TextView</string>
    <string name="general_app_lable">Finanz App Logo</string>
    <string name="general_image_login">Money rise up</string>
    <string name="general_discription_image_Diamont">Ein Diamant</string>
    <string name="general_empty_text" />
    <string name="general_discription_Image_Contract">Bild mit Blätter</string>
    <string name="general_cancel_text">Abbrechen</string>
    <string name="general_delete_text">Soll der Eintrag wirklich gelöscht werden?</string>
    <string name="AddButtonText">+</string>
    <string name="genreral_new_numeric_euro">Wert in €</string>

    <!-- Navigation and Nav Header-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Finanz App</string>
    <string name="nav_header_subtitle">FinanzenMM@gmx.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to Home -->
    <string name="home_chart_lable">Schnellausgabe hinzufügen</string>
    <string name="home_Text">Die Clevere Art Finanzen zu Verwalten</string>

    <!-- Strings related to menu -->
    <string name="menu_home">Home</string>
    <string name="menu_assets">Vermögen</string>
    <string name="menu_financebook">Finanzbuch</string>
    <string name="menu_contracts">Verträge</string>
    <string name="menu_logout">Logout</string>


    <!-- Strings related to assets -->
    <string name="assets">Vermögen</string>
    <string name="assets_details">Vermögenswerte Detailansicht</string>
    <string name="assets_add">Vermögen hinzufügen</string>
    <string name="assets_details_change">Vermögenswerte ändern</string>
    <string name="assets_back">Zurück</string>
    <string name="asset_item_layout_costs">Kosten:</string>
    <string name="asset_item_layout_euro">€</string>
    <string name="asset_item_layout_income">Einkünfte:</string>
    <string name="assets_note">Notiz:</string>
    <string name="assets_image_path">Bildpfad:</string>
    <string name="assets_monthly_income">mtl.Eink.:</string>
    <string name="assets_monthly_costs">Tilgung:</string>
    <string name="assets_name">Name:</string>
    <string name="assets_category">Kategorie:</string>
    <string name="assets_delet_button">Löschen</string>
    <string name="assets_change_button">Ändern</string>
    <string name="assets_save">Speichern</string>
    <string name="assets_details_change_save_button">Änderung Speichern</string>
    <string name="assets_hint_Name">Wohnung Berliner Str.</string>
    <string name="assets_hint_note">Adresse,Mieter usw</string>
    <string name="assets_hint_category">Immobilie, Kunst, Schmuck etc</string>
    <string name="asset_item_layout_monthly">Monatlich</string>
    <string name="assets_financialasset_name">Verkehrswert:</string>
    <string name="assets_credit_name">Kredit:</string>
    <string name="assets_chart_lable">Diagramm Vermögen</string>
    <string name="assets_hint_number_plus_euro">Neuer Wert in €</string>
    <string name="title_activity_assets_charts">AssetsCharts</string>

    <!-- Strings related to login -->
    <string name="PinChangeButton">PIN festlegen</string>
    <string name="NumericTextPinChange">PIN</string>
    <string name="TextPinChange">PIN festlegen</string>
    <string name="PinChangeHint1">PIN eingeben</string>
    <string name="PinChangeHint2">PIN erneut eingeben</string>
    <string name="buttonPinEnter">Weiter</string>
    <string name="TextPinEnter">Log</string>
    <string name="TextPinEnter2">in</string>
    <string name="TextPinEnter_Lable"> PIN Abfrage</string>
    <string name="PinChange_Lable"> PIN Festlegen</string>
    <string name="LoadingApp"> wird geladen...</string>

    <!-- Strings related to Financebook -->
    <string name="ButtonFinanzbookAdd"> + </string>
    <string name="fb_button_discription">"Chartanalyse "</string>
    <string name="fb_financebook_templates_discription">Finanzbuch Templates erstellen</string>
    <string name="fb_financebook_lable">Finanzbuch</string>
    <string name="fb_financebook_charts_lable">Diagramm FB</string>
    <string name="fb_Chart_overwiev_current_month_Name">Aktueller Monat</string>
    <string name="fb_chart_overwiev_herarchy_main_cathegories">Hauptkategorien nach Kostenanteil</string>

    <!-- Strings related to Contracts -->
    <string name="contracts_type">Vertragstyp:</string>
    <string name="contracts_name">Vertragspartner:</string>
    <string name="contracts_monthly_costs">mtl. Kosten:</string>
    <string name="contracts_note">Anmerkung:</string>
    <string name="contracts_details_headline">Vertrag Details</string>
    <string name="contracts_details_lable">Vertrag Details</string>
    <string name="contracts_add_new_lable">Vertrag anlegen</string>
    <string name="contracts_overwiev_lable">Vertragsübersicht</string>
    <string name="contracts_Charts_lable">Diagramm Verträge</string>
    <string name="contracts_details_change_lable">Vertrag ändern</string>
    <string name="contracts_hint_type">Autoversicherung,Krankenversicherung</string>
    <string name="contract_hint_note">Kündigungsfrist, Besonderheiten</string>
    <string name="contract_hint_name">Verti, Huk, AOK ...</string>
    <string name="contracts_chart_text_view_Name">Übersicht Verträge</string>
    <string name="Contracts_Chart_lable">Diagramm Verträge</string>

    <!-- Strings related to ContractIncome -->

    <string name="ContractIncomehintCompany">BMW, Systemhaus, Bundeswehr, ...</string>
    <string name="ContractIncomeHintCategory">Lohn, Gehalt, Sold, ...</string>
    <string name="content_addBuy">Ausgabe</string>

    <!-- Strings related to Income -->
    <string name="income_item_layout_netto">Netto:</string>
    <string name="income_item_layout_brutto">Brutto:</string>
    <string name="income_category">Kategorie</string>
    <string name="income_company">Unternehmen</string>
    <string name="income_brutto">Brutto Mtl.</string>
    <string name="income_netto">Netto Mtl.</string>
    <string name="income_note">Anmerkung</string>
    <string name="income_details_change_lable">Verdienstverträge ändern</string>
    <string name="income_details_lable">Verdienstverträge Details</string>
    <string name="income_add_new_lable">Verdienstverträge hinzufügen </string>
    <string name="income_overwiev_lable">Verdienstverträge Übersicht</string>
    <string name="income_delete_button">Löschen</string>
    <string name="income_change_button">Ändern</string>
    <string name="income_change_save_button">Änderung speichern</string>

    <!--Costs Hierarchy-->
    <string name="costshierarchyE1_title_textview_E1">Ausgewählte Hauptkategorie</string>
    <string name="costshierarchyE2_title_textview_E2">Ausgewählte Unterkategorie</string>
    <string name="costshierarchyE3_title_textview_E3">Ausgewählte Subkategorie</string>

    <!--Costs Hierarchy Overview-->
    <string name="costshierarchyOverview_title_listview_E1">Angelegte Hauptkategorien</string>
    <string name="costshierarchyOverview_title_listview_Overview_lable">Hauptkategorien</string>
    <string name="costshierarchyOverview_addE1_button">Hauptkategorie anlegen</string>
    <string name="hierarchie_Overview_TextDialog">Wofür haben Sie Ausgaben getätigt?</string>
    <string name="hierarchie_Overview_dialogbox_hints">Lebensmittel, Wohnen, Auto, ...</string>
    <string name="Costhierarchie_Dialog_Overview_Headtext">Legen Sie eine Hauptkategorie an</string>

    <!--Costs Hierarchy E1-->
    <string name="costshierarchyE1_title_listview_E2">Unterkategorien</string>
    <string name="costshierarchyE1_addE2_button">Unterkategorie anlegen</string>
    <string name="costshierarchyE1_deleteE1_button">Hauptkategorie löschen</string>
    <string name="costshierarchyOverview_title_listview_E1_lable">Unterkategorie</string>
    <string name="costhierarchyE1_text">Inhalt Hauptkategorie</string>
    <string name="hierarchie_E1_TextDialog">Welche Unterkategorie zur Hauptkategorie wollen Sie?</string>
    <string name="hierarchie_E1_dialogbox_hints">Discounter, Baumärkte, Tankstellen, ...</string>
    <string name="Costhierarchie_Dialog_E1_Headtext">Legen Sie eine Unterkategorie an</string>

    <!--Costs Hierarchy E2-->
    <string name="costshierarchyE2_title_listview_E3">Subunterkategorie</string>
    <string name="costshierarchyE2_addE3_button">Subunterkategorie anlegen</string>
    <string name="costshierarchyE2_deleteE2_button">Unterkategorie löschen</string>
    <string name="costshierarchyOverview_title_listview_E2_lable">Subunterkategorie</string>
    <string name="hierarchie_E2_TextDialog">Welche Subunterkategorie zur Hauptkategorie wollen Sie?</string>
    <string name="hierarchie_E2_dialogbox_hints">Aldi, OBI, Jet, ...</string>
    <string name="Costhierarchie_Dialog_E2_Headtext">Legen Sie eine Subunterkategorie an</string>

    <!--Costs Hierarchy E3-->
    <string name="costshierarchyE3_deleteE3_button">Subunterkategorie löschen</string>
    <string name="costshierarchyOverview_title_listview_E3_lable">Subunterkategorie löschen</string>
    <string name="genereal_costs_name">Kosten:</string>


    <!--QuickPay-->
    <string name="spinnerQuickPayE1TextAbove">Wählen Sie eine Hauptkategorie</string>
    <string name="spinnerQuickPayE2TextAbove">Wählen Sie eine Unterkategorie</string>
    <string name="spinnerQuickPayE3TextAbove">Wählen Sie eine Subunterkategorie</string>
    <string name="EdittextQuickPayCostsTextAbove">Betrag eingeben</string>
    <string name="quick_add_lable">Schnellausgabe hinzufügen</string>

    <!-- CashflowAdd -->
    <string name="cashflow_add_lable">Einmalige Transaktion</string>
    <string name="Cash_flow_add_new_Name">Einmalige Einnahmen / Ausgaben hinzufügen:</string>
    <string name="cash_flow_spinner1_name">Art der Eingabe wählen</string>
    <string name="cash_flow_spinner2_name">Inhalt wählen</string>
    <string name="cash_flow_Button_income_name">Einnahme</string>
    <string name="cash_flow_Button_expanditure_name">Ausgabe</string>
    <string name="cash_flow_Button_date_name">Datum wählen</string>
    <string name="cash_flow_Button_amount_name">Betrag eingeben</string>
    <string name="cahsflow_hint_date">01.01.2021</string>

    <!-- Unused at the moment -->
    <string name="welcome">"Welcome !"</string>
    <string name="assets_overview_name_top">Aktive Verträge</string>
    <string name="value_overview_top_name">Vermögen</string>

</resources>