<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/wallet"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_financeBook"
            android:icon="@drawable/wealth_icon_nav2"
            android:title="@string/menu_financebook"
            app:showAsAction="always" />
        <item
            android:id="@+id/nav_assets"
            android:icon="@drawable/euro_color_icon_nav"
            android:title="@string/menu_assets" />
        <item
            android:id="@+id/nav_contracts"
            android:icon="@drawable/contract"
            android:title="@string/menu_contracts" />



    </group>
    <item android:title="@string/general_empty_text">
        <menu>


            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/power_button_nav"
                android:title="@string/menu_logout" />


        </menu>
    </item>
</menu>