<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Income.IncomeAddNew">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="23dp"
        android:text="@string/income_netto"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextContractNote"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <EditText
        android:id="@+id/editTextIncomeAddNewNetto"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIncomeAddNewBrutto" />

    <EditText
        android:id="@+id/editTextIncomeAddNewNote"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textShortMessage|textLongMessage|textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIncomeAddNewNetto" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="6dp"
        android:text="@string/income_note"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextContractName"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <EditText
        android:id="@+id/editTextIncomeAddNewCategory"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="28dp"
        android:text="@string/income_category"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextContractType"
        app:layout_constraintTop_toBottomOf="@+id/buttonBackContractsAddNew3" />

    <EditText
        android:id="@+id/editTextIncomeAddNewCompany"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPersonName|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIncomeAddNewCategory" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="112dp"
        android:layout_height="36dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="28dp"
        android:text="@string/income_company"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextContractMonthlyCosts"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="23dp"
        android:text="@string/income_brutto"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextContractNote"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <EditText
        android:id="@+id/editTextIncomeAddNewBrutto"
        android:layout_width="280dp"
        android:layout_height="43dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="202dp" />

    <Button
        android:id="@+id/buttonBackContractsAddNew3"
        android:layout_width="83dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="NavBack"
        android:text="@string/assets_back"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="SaveIncome"
        android:text="@string/assets_save"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>